@@ -1,12 +1,12 @@
 package com.coigniez.resumebuilder.domain.sectionitem.itemtypes;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.coigniez.resumebuilder.interfaces.SectionItemData;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 
-import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -17,15 +17,15 @@ import lombok.NoArgsConstructor;
 @AllArgsConstructor
 @Builder
 public class Skillboxes implements SectionItemData {
-    
-    public static final int BASE_PARAMETER_COUNT = 1;
-    
-    @NotBlank
-    private String skills; // Seperated by ','
 
+    @NotNull
+    @NotEmpty
+    private List<String> skills;
+
+    @Override
     @JsonIgnore
-    public List<String> getSectionItemData() {
-        return Arrays.asList(skills);
+    public List<String> getData() {
+        String skillsString = skills.toString();
+        return List.of(skillsString.substring(1, skillsString.length() - 1));
     }
 }
-
